Código con estilo: crea tu landing page con Bootstrap

--- a/Me volvere millonario/index.html
+++ b/Me volvere millonario/index.html
@@ -34,7 +34,7 @@
     <div class="container custom-container">
       <div class="item fs-2"><strong>Tu Futuro Millonario Comienza HOY</strong><br>"¿Aceptas el Desafío?"</div>
       <div class="item"><b>¿Estás listo para transformar tu vida?</b><br>¡Este es tu momento! Con las estrategias correctas, mentalidad ganadora y acciones decididas...</div>
-      <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#formModal">
+      <button type="button" class="btn btn-outline-success">
         ¡Sí, Quiero Mi Libertad Financiera!
       </button>
       <img src="https://img.freepik.com/foto-gratis/retrato-hombre-confiado-sonriente-gafas-sol_171337-9745.jpg?semt=ais_hybrid&w=740" class="item rounded mx-auto d-block" alt="¡Me volveré millonario!">
